# wesl-playground

./: .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
script/: weslPkgToJson.js
src/: App.tsx  AppMain.tsx  Canvas.tsx  DropButton.tsx  Editor.tsx  Options.tsx  PackageExplorer.tsx  Tabs.tsx  Theme.tsx  app.ts  index.tsx  monaco.ts  share.ts  state.ts  storage.ts  style.scss  wesl.ts
src/wesl-web/: package.json  wesl_web.d.ts  wesl_web.js  wesl_web_bg.wasm.d.ts
wesl-web/: Cargo.toml
wesl-web/src/: lib.rs
