[package]
name = "wesl-web"
version = "0.1.0"
authors = ["Mathis Brossier <mathis.brossier@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ansi-to-html", "naga"]
debug = ["console_log", "console_error_panic_hook"]

[dependencies]
log = "0.4.22"
cfg-if = "0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = { version = "0.4.5", features = ["js"], default-features = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", features = ["color"], optional = true }

wesl = { path = "../../wesl/crates/wesl" }

ansi-to-html = { version = "0.2.1", optional = true }

naga = { version = "23.0.0", features = ["wgsl-in", "wgsl-out"], optional = true }
thiserror = "2.0.3"
serde_bytes = "0.11.15"
wasm-bindgen = "0.2.95"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
